--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="col-12 col-md-8">
                 <h3 class="fw-semibold">Hi! I am</h3>
                 <h1 class="fw-bold">Tegar Muhamad Hafiez</h1>
-                <p>I am Junior Front-end Dev based in Jakarta</p>
+                <p>I am Junior Quality Assurance based in Jakarta</p>
                 <a class="btn button" href="images/phototegar.png" download>Resume</a>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
@@ -61,18 +61,20 @@
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="about-exp-item-detail">Accompanying, supervising and facilitating participants Football Resilience Coaching for Life</p>
+                <p class="about-exp-item-detail">As an agent to handle and also supervise the division goals. In terms of handling of football division, I teach and report every event that is related to the division's goals.</p>
             </div>
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                     <div>
-                        <h5>Admin Commissioning Data Center</h5>
+                        <h5>Technical Administrator Data Center</h5>
                         <p>PT.Indokomas Buana Perkasa (Mar 2023 - Sept 2023)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="about-exp-item-detail">Part of Commissioning Division on Data Center project in Karawang - Indonesia.
-                  As commissioning admin, update and report are part of my duties. Based on the actual inspection from other parties, I need to make and update the report in the client platform to make sure the data deliver and easy to understand to all parties.</p>
+                <p class="about-exp-item-detail" Part of Commissioning Division on Data Center project in Karawang - Indonesia.
+-As commissioning admin, update and report are part of my duties. Based on the actual inspection from other parties, I need to make and update the report in the client platform to make sure the data deliver correctly and easy to understand to all parties. 
+
+-Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment).</p>
             </div>
             
         </div>
@@ -80,7 +82,7 @@
     <section id="work" class="work container">
         <div class="row d-flex align-items-center gap-5">
             <div class="col-12 col-5">
-                <p> <h5> I still want to learn many things in the world of programming, that's why I decided to become a front end web developer:)</h5></p>
+                <p> <h5> I still want to learn many things in the world of programming, that's why I decided to become a Quality Assurance</h5></p>
             </div>
             <div class="col-12 col-6 work-img">
                 <div id="work-1" class="work-img-item">    
