--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="about-exp-item-detail"> Part of Commissioning Division on Data Center project in Karawang - Indonesia.
--As commissioning admin, update and report are part of my duties. Based on the actual inspection from other parties, I need to make and update the report in the client platform to make sure the data deliver correctly and easy to understand to all parties. 
--Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment).  </p>
+                <p class="about-exp-item-detail"> <h5>Part of Commissioning Division on Data Center project in Karawang - Indonesia.</h5>
+<h5>-As commissioning admin, update and report are part of my duties. Based on the actual inspection from other parties, I need to make and update the report in the client platform to make sure the data deliver correctly and easy to understand to all parties. </h5>
+<h5>-Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment). </h5> </p>
             </div>
             
         </div>
