--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </a>
     </section>
     <section id="about" class="about container">
-        <p>As graduated student from University in Indonesia with Informatic Technology major, I aware that full stack knowledge that get from university still not enough. But I'm confident and eager to learn more about Front-End to be my next career path.</p>
+        <p>As graduated student from University in Indonesia with Informatic Technology major, I aware that full stack knowledge that get from university still not enough. But I'm confident and eager to learn more about Quality Assurance to be my next career path.</p>
         <div class="about-exp">
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
