--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </a>
     </section>
     <section id="about" class="about container">
-        <p>As graduated student from University in Indonesia with Informatic Technology major, I aware that full stack knowledge that get from university still not enough. But I'm confident and eager to learn more about Quality Assurance to be my next career path.</p>
+        <p>Bachelor of Computer Science who has an interest in programming, understand systems, application, and web development. As well as database management, skilled in HTML, CSS, JavaScript, Python and PHP programming languages. Experience troubleshooting software and hardware as well as the capability of understanding IT Quality Assurance for manual and automation testing.</p>
         <div class="about-exp">
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
