--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h3 class="fw-semibold">Hi! I am</h3>
                 <h1 class="fw-bold">Tegar Muhamad Hafiez</h1>
                 <p>I am Junior Quality Assurance based in Jakarta</p>
-                <a class="btn button" href="Resume Tegar - QA.pdf" download>Resume</a>
+                <a class="btn button" href="Resume Tegarmhafiez.pdf" download>Resume</a>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
                 <img src="images/phototegar.png" alt="Potrait">
@@ -73,6 +73,7 @@
                 </div>
                 <p class="about-exp-item-detail"> Part of Commissioning Division on Data Center project in Karawang - Indonesia.
 As commissioning admin, update and report are part of my duties. Based on the actual inspection from other parties, I need to make and update the report in the client platform to make sure the data deliver correctly and easy to understand to all parties.
+<br>
 -Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment).  </p>
             </div>
             
