--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h3 class="fw-semibold">Hi! I am</h3>
                 <h1 class="fw-bold">Tegar Muhamad Hafiez</h1>
                 <p>I am Junior Quality Assurance based in Jakarta</p>
-               <a class="btn button" href="Resume Tegar - QA.pdf" download>Resume</a>
+               <a class="btn button" href="Resume TegarMHafiez.pdf" download>Resume</a>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
                 <img src="images/phototegar.png" alt="Potrait">
