--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <h3 class="fw-semibold">Hi! I am</h3>
                 <h1 class="fw-bold">Tegar Muhamad Hafiez</h1>
                 <p>I am Junior Quality Assurance based in Jakarta</p>
-               <a class="btn button" href="Resume TegarMHafiez.pdf" download>Resume</a>
+               <a class="btn button" href="Resume-TegarMHafiez.pdf" download>Resume</a>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
-                <img src="images/phototegar.png" alt="Potrait">
+                <img src="images/Photo.jpg" alt="Potrait">
             </div>
         </div>
         <a href="#about" class="text-decoration-none arrow w-100 d-flex align-items-center flex-column mt-5">
@@ -51,10 +51,27 @@
         </a>
     </section>
     <section id="about" class="about container">
-        <p>Bachelor of Computer Science who has an interest in programming, understand systems, application, and web development. As well as database management, skilled in HTML, CSS, JavaScript, Python and PHP programming languages. Experience troubleshooting software and hardware as well as the capability of understanding IT Quality Assurance for manual and automation testing.</p>
+        <p>Bachelor of Computer Science who has an interest in programming, understand systems, application, and web development. As well as database management, skilled in HTML, CSS, JavaScript, Python and PHP programming languages. Experience troubleshooting software and hardware as well as the capability of understanding IT Quality Assurance for manual or automation testing and basic computer network.</p>
         <div class="about-exp">
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
+                     <div>
+                        <h5>IT Support</h5>
+                        <p> Mott MacDonald Indonesia (Mar 2024- Present)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">
+                    • Ensure maintenance/repair of IT equipment and applications/software at the request of service desk ticket staff in accordance with SLA
+                    • Installing, configuring, monitoring and maintaining computer hardware, software, printers, etc
+                    • Providing technical IT support to project staff.
+                    • Preparation of computer graphics, charts and schedules.
+                    • Preparation of spreadsheets, and computations.
+                    • Any other administrative task and so on</p>
+            </div>
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                    <div>
                     <div>
                         <h5>Local Facilitator</h5>
                         <p>Save The Children Indonesia (Jan 2021- Des 2021)</p>
@@ -72,9 +89,9 @@
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
                 <p class="about-exp-item-detail"> Part of Commissioning Division on Data Center project in Karawang - Indonesia.
-As commissioning admin, update and report are part of my duties. Based on the actual inspection from other parties, I need to make and update the report in the client platform to make sure the data deliver correctly and easy to understand to all parties.
-<br>
--Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment).  </p>
+                • Make and update the report in the client platform (Compass) to make sure the data is delivered correctly
+                    <br>
+                • Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment).</p>
             </div>
             
         </div>
