--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <div class="col-12 col-md-8">
                 <h3 class="fw-semibold">Hi! I am</h3>
                 <h1 class="fw-bold">Tegar Muhamad Hafiez</h1>
-                <p>I am Junior Quality Assurance based in Jakarta</p>
+                <p>I am Junior Front-End based in Jakarta</p>
                <a class="btn button" href="Resume-TegarMHafiez.pdf" download>Resume</a>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
-                <img src="images/Photo.jpg" alt="Potrait">
+                <img src="Photo.jpg" alt="Potrait">
             </div>
         </div>
         <a href="#about" class="text-decoration-none arrow w-100 d-flex align-items-center flex-column mt-5">
@@ -63,13 +63,29 @@
                 </div>
                 <p class="about-exp-item-detail">
                     • Ensure maintenance/repair of IT equipment and applications/software at the request of service desk ticket staff in accordance with SLA
+                    <br>
                     • Installing, configuring, monitoring and maintaining computer hardware, software, printers, etc
+                    <br>
                     • Providing technical IT support to project staff.
+                    <br>
                     • Preparation of computer graphics, charts and schedules.
+                    <br>
                     • Preparation of spreadsheets, and computations.
+                    <br>
                     • Any other administrative task and so on</p>
             </div>
-            <div class="about-exp-item">
+                        <h5>Technical Administrator Data Center</h5>
+                        <p>PT.Indokomas Buana Perkasa (Mar 2023 - Sept 2023)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail"> Part of Commissioning Division on Data Center project in Karawang - Indonesia.
+                    <br>
+                    • Make and update the report in the client platform (Compass) to make sure the data is delivered correctly
+                    <br>
+                    • Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment).</p>
+            </div>
+             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                     <div>
                     <div>
@@ -83,17 +99,6 @@
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                     <div>
-                        <h5>Technical Administrator Data Center</h5>
-                        <p>PT.Indokomas Buana Perkasa (Mar 2023 - Sept 2023)</p>
-                    </div>
-                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
-                </div>
-                <p class="about-exp-item-detail"> Part of Commissioning Division on Data Center project in Karawang - Indonesia.
-                • Make and update the report in the client platform (Compass) to make sure the data is delivered correctly
-                    <br>
-                • Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment).</p>
-            </div>
-            
         </div>
     </section>
     <section id="work" class="work container">
