--- a/index.html
+++ b/index.html
@@ -74,38 +74,24 @@
                     <br>
                     • Any other administrative task and so on</p>
             </div>
-                        <h5>Technical Administrator Data Center</h5>
-                        <p>PT.Indokomas Buana Perkasa (Mar 2023 - Sept 2023)</p>
+                      <h5>Technical Administrator</h5>
+                        <p> PT.Indokomas Buana Perkasa (Mar 2023- Sept 2023)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="about-exp-item-detail"> Part of Commissioning Division on Data Center project in Karawang - Indonesia.
+                <p class="about-exp-item-detail">
+                    Part of Commissioning Division on Data Center project in Karawang - Indonesia.
                     <br>
                     • Make and update the report in the client platform (Compass) to make sure the data is delivered correctly
                     <br>
                     • Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment).</p>
             </div>
-             <div class="about-exp-item">
-                <div class="about-exp-item-header">
-                    <div>
-                    <div>
-                        <h5>Local Facilitator</h5>
-                        <p>Save The Children Indonesia (Jan 2021- Des 2021)</p>
-                    </div>
-                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
-                </div>
-                <p class="about-exp-item-detail">As an agent to handle and also supervise the division goals. In terms of handling of football division, I teach and report every event that is related to the division's goals.</p>
-            </div>
-            <div class="about-exp-item">
-                <div class="about-exp-item-header">
-                    <div>
         </div>
     </section>
     <section id="work" class="work container">
         <div class="row d-flex align-items-center gap-5">
             <div class="col-12 col-5">
-                <p> <h5> I still want to learn many things in the world of programming, that's why I decided to become a Quality Assurance</h5></p>
-            </div>
+       </div/>
             <div class="col-12 col-6 work-img">
                 <div id="work-1" class="work-img-item">    
                     <img src="images/work-1.png" alt="work 1" >
