--- a/index.html
+++ b/index.html
@@ -74,18 +74,27 @@
                     <br>
                     • Any other administrative task and so on</p>
             </div>
-                      <h5>Technical Administrator</h5>
-                        <p> PT.Indokomas Buana Perkasa (Mar 2023- Sept 2023)</p>
+             <div class="about-exp">
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                     <div>
+                        <h5>IT Support</h5>
+                        <p> Mott MacDonald Indonesia (Mar 2024- Present)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
                 <p class="about-exp-item-detail">
-                    Part of Commissioning Division on Data Center project in Karawang - Indonesia.
+                    • Ensure maintenance/repair of IT equipment and applications/software at the request of service desk ticket staff in accordance with SLA
                     <br>
-                    • Make and update the report in the client platform (Compass) to make sure the data is delivered correctly
+                    • Installing, configuring, monitoring and maintaining computer hardware, software, printers, etc
                     <br>
-                    • Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment).</p>
-            </div>
+                    • Providing technical IT support to project staff.
+                    <br>
+                    • Preparation of computer graphics, charts and schedules.
+                    <br>
+                    • Preparation of spreadsheets, and computations.
+                    <br>
+                    • Any other administrative task and so on</p>
         </div>
     </section>
     <section id="work" class="work container">
