--- a/index.html
+++ b/index.html
@@ -96,6 +96,28 @@
                     <br>
                     • Any other administrative task and so on</p>
         </div>
+                   <div class="about-exp">
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                     <div>
+                        <h5>IT Support</h5>
+                        <p> Mott MacDonald Indonesia (Mar 2024- Present)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">
+                    • Ensure maintenance/repair of IT equipment and applications/software at the request of service desk ticket staff in accordance with SLA
+                    <br>
+                    • Installing, configuring, monitoring and maintaining computer hardware, software, printers, etc
+                    <br>
+                    • Providing technical IT support to project staff.
+                    <br>
+                    • Preparation of computer graphics, charts and schedules.
+                    <br>
+                    • Preparation of spreadsheets, and computations.
+                    <br>
+                    • Any other administrative task and so on</p>
+        </div>
     </section>
     <section id="work" class="work container">
         <div class="row d-flex align-items-center gap-5">
