--- a/index.html
+++ b/index.html
@@ -78,45 +78,29 @@
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                      <div>
-                        <h5>IT Support</h5>
-                        <p> Mott MacDonald Indonesia (Mar 2024- Present)</p>
+                        <h5>Technical Administrator</h5>
+                        <p> PT.Indokomas Buana Perkasa (Mar 2024- Present)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="about-exp-item-detail">
-                    • Ensure maintenance/repair of IT equipment and applications/software at the request of service desk ticket staff in accordance with SLA
+                <p class="about-exp-item-detail"> Part of Commissioning Division on Data Center project in Karawang - Indonesia.
                     <br>
-                    • Installing, configuring, monitoring and maintaining computer hardware, software, printers, etc
+                    •  Make and update the report in the client platform (Compass) to make sure the data is delivered correctly
                     <br>
-                    • Providing technical IT support to project staff.
-                    <br>
-                    • Preparation of computer graphics, charts and schedules.
-                    <br>
-                    • Preparation of spreadsheets, and computations.
-                    <br>
-                    • Any other administrative task and so on</p>
+                    • Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment). </p>
         </div>
                    <div class="about-exp">
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                      <div>
-                        <h5>IT Support</h5>
-                        <p> Mott MacDonald Indonesia (Mar 2024- Present)</p>
+                        <h5>Local Facilitator</h5>
+                        <p> Save The Children Indonesia (Jan 2021- Des 2021)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="about-exp-item-detail">
-                    • Ensure maintenance/repair of IT equipment and applications/software at the request of service desk ticket staff in accordance with SLA
+                <p class="about-exp-item-detail"> Internship
                     <br>
-                    • Installing, configuring, monitoring and maintaining computer hardware, software, printers, etc
-                    <br>
-                    • Providing technical IT support to project staff.
-                    <br>
-                    • Preparation of computer graphics, charts and schedules.
-                    <br>
-                    • Preparation of spreadsheets, and computations.
-                    <br>
-                    • Any other administrative task and so on</p>
+                    • As an agent to handle and also supervise the division goals. In terms of handling of football division, I teach and report every event that is related to the division's goals.</p>
         </div>
     </section>
     <section id="work" class="work container">
