--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                <a class="btn button" href="Resume-TegarMHafiez.pdf" download>Resume</a>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
-                <img src="Photo.jpg" alt="Potrait">
+                <img src="images/Photo.jpg" alt="Potrait">
             </div>
         </div>
         <a href="#about" class="text-decoration-none arrow w-100 d-flex align-items-center flex-column mt-5">
@@ -79,7 +79,7 @@
                 <div class="about-exp-item-header">
                      <div>
                         <h5>Technical Administrator</h5>
-                        <p> PT.Indokomas Buana Perkasa (Mar 2024- Present)</p>
+                        <p> PT.Indokomas Buana Perkasa (Mar 2023- Sept 2023)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
