--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="col d-flex align-items-center">
                         <a href="https://id.linkedin.com/in/tegarmhafiez" target="_blank">
                         <img class="w-25" src="images/Linkedin.svg" alt="twitter icon">
-                        <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p>
+                        <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p> </a>
                     </div>
                 </div>
             </div>
