--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                <a class="btn button" href="Resume-TegarMHafiez.pdf" download>Resume</a>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
-                <img src="images/Photo.jpg" alt="Potrait">
+                <img src="images/phototegar.png" alt="Potrait">
             </div>
         </div>
         <a href="#about" class="text-decoration-none arrow w-100 d-flex align-items-center flex-column mt-5">
@@ -128,17 +128,19 @@
                 </h5>
                 <div class="row">
                     <div class="col d-flex align-items-center">
+                        <a href="https://acesse.one/hfQWD" target="_blank"> </a>
                         <img class="w-25" src="images/Facebook.svg" alt="facebook icon">
                         <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p>
                     </div>
                     <div class="col d-flex align-items-center">
+                        <a href="https://www.instagram.com/tegarmh_/" target="_blank"> </a>
                         <img class="w-25" src="images/Instagram.svg" alt="instagram icon">
                         <p class="mb-0 ms-2">@tegarmh_</p>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <a href="https://id.linkedin.com/in/tegarmhafiez" target="_blank">
-                        <img class="w-25" src="images/Linkedin.svg" alt="twitter icon">
-                        <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p> </a>
+                        <a href="https://id.linkedin.com/in/tegarmhafiez" target="_blank"> </a>
+                        <img class="w-25" src="images/Linkedin.svg" alt="linkedin icon">
+                        <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p>
                     </div>
                 </div>
             </div>
