--- a/index.html
+++ b/index.html
@@ -128,18 +128,18 @@
                 </h5>
                 <div class="row">
                     <div class="col d-flex align-items-center">
-                        <a href="https://acesse.one/hfQWD" target="_blank"> </a>
-                        <img class="w-25" src="images/Facebook.svg" alt="facebook icon">
+                        <a href="https://acesse.one/hfQWD" target="_blank"> 
+                        <img class="w-25" src="images/Facebook.svg" alt="facebook icon"> </a>
                         <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <a href="https://www.instagram.com/tegarmh_/" target="_blank"> </a>
-                        <img class="w-25" src="images/Instagram.svg" alt="instagram icon">
+                        <a href="https://www.instagram.com/tegarmh_/" target="_blank"> 
+                        <img class="w-25" src="images/Instagram.svg" alt="instagram icon"> </a>
                         <p class="mb-0 ms-2">@tegarmh_</p>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <a href="https://id.linkedin.com/in/tegarmhafiez" target="_blank"> </a>
-                        <img class="w-25" src="images/Linkedin.svg" alt="linkedin icon">
+                        <a href="https://id.linkedin.com/in/tegarmhafiez" target="_blank"> 
+                        <img class="w-25" src="images/Linkedin.svg" alt="linkedin icon"> </a>
                         <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p>
                     </div>
                 </div>
