--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                         <p class="mb-0 ms-2">@tegarmh_</p>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <a href="https://id.linkedin.com/in/tegarmhafiez" target="_blank"> 
-                        <img class="w-25" src="images/Linkedin.svg" alt="linkedin icon"> </a>
+                        <img class="w-25" src="images/Linkedin.svg" alt="linkedin icon"> 
+                         <a href="https://id.linkedin.com/in/tegarmhafiez" target="_blank"> </a>
                         <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p>
                     </div>
                 </div>
