--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                     </div>
                     <div class="col d-flex align-items-center">
                         <img class="w-25" src="images/Linkedin.svg" alt="linkedin icon"> 
-                         <a href="https://id.linkedin.com/in/tegarmhafiez" target="_blank"> </a>
-                        <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p>
+                         <a href="https://id.linkedin.com/in/tegarmhafiez" target="_blank"> 
+                        <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p> </a>
                     </div>
                 </div>
             </div>
