--- a/index.html
+++ b/index.html
@@ -128,17 +128,17 @@
                 </h5>
                 <div class="row">
                     <div class="col d-flex align-items-center">
-                        <a href="https://www.facebook.com/people/Tegar-Muhamad-Hafiez/pfbid02d5Bya9BgPU4VXkQbZwwmM3AxVt78R3LADMS2UovLtHt55tTB6SNVtM2yPyTmDumVl/?mibextid=ZbWKwL" target="_blank"> 
+                        <a href="https://www.facebook.com/people/Tegar-Muhamad-Hafiez/pfbid02d5Bya9BgPU4VXkQbZwwmM3AxVt78R3LADMS2UovLtHt55tTB6SNVtM2yPyTmDumVl/?mibextid=ZbWKwL"> 
                         <img class="w-25" src="images/Facebook.svg" alt="facebook icon"> 
                         <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p> </a>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <a href="https://www.instagram.com/tegarmh_/" target="_blank"> 
+                        <a href="https://www.instagram.com/tegarmh_/"> 
                         <img class="w-25" src="images/Instagram.svg" alt="instagram icon"> 
                         <p class="mb-0 ms-2">@tegarmh_</p> </a>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <a href="https://id.linkedin.com/in/tegarmhafiez" target="_blank">
+                        <a href="https://id.linkedin.com/in/tegarmhafiez" ">
                         <img class="w-25" src="images/Linkedin.svg" alt="linkedin icon">  
                         <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p> </a>
                     </div>
