--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="row">
                     <div class="col d-flex align-items-center">
                         <a href="https://www.facebook.com/people/Tegar-Muhamad-Hafiez/pfbid02d5Bya9BgPU4VXkQbZwwmM3AxVt78R3LADMS2UovLtHt55tTB6SNVtM2yPyTmDumVl/?mibextid=ZbWKwL">
-                        <img class="w-25" src="images/Facebook.svg" alt="facebook icon"> 
+                        <img src="images/Facebook.svg" alt="facebook icon"> 
                         </a>
                         <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p>
                     </div>
