--- a/index.html
+++ b/index.html
@@ -129,16 +129,20 @@
                 <div class="row">
                     <div class="col d-flex align-items-center">
                         <a href="https://www.facebook.com/people/Tegar-Muhamad-Hafiez/pfbid02d5Bya9BgPU4VXkQbZwwmM3AxVt78R3LADMS2UovLtHt55tTB6SNVtM2yPyTmDumVl/?mibextid=ZbWKwL" target="blank">
-                        <img src="images/Facebook.svg" alt="facebook icon"> 
+                        <img class="w-25" src="images/Facebook.svg" alt="facebook icon"> 
                         </a>
                         <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p>
                     </div>
                     <div class="col d-flex align-items-center"> 
-                        <img class="w-25" src="images/Instagram.svg" href="https://www.instagram.com/tegarmh_/" alt="instagram icon"> 
+                        <a href="https://www.instagram.com/tegarmh_/" target="blank">
+                        <img class="w-25" src="images/Instagram.svg"  alt="instagram icon"> 
+                        </a>
                         <p class="mb-0 ms-2">@tegarmh_</p>
                     </div>
                     <div class="col d-flex align-items-center">
-                        <img class="w-25" src="images/Linkedin.svg" href="https://id.linkedin.com/in/tegarmhafiez" alt="linkedin icon" >  
+                        <a href="https://id.linkedin.com/in/tegarmhafiez" target="blank">
+                        <img class="w-25" src="images/Linkedin.svg" alt="linkedin icon" > 
+                        </a>
                         <p class="mb-0 ms-2">Tegar Muhamad Hafiez</p>
                     </div>
                 </div>
