--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </a>
     </section>
     <section id="about" class="about container">
-        <p>Bachelor of Computer Science who has an interest in programming, understand systems, application, and web development. As well as database management, skilled in HTML, CSS, JavaScript, Python and PHP programming languages. Experience troubleshooting software and hardware as well as the capability of understanding IT Quality Assurance for manual or automation testing and basic computer network.</p>
+        <p>Bachelor of Computer Science with experience in troubleshooting hardware, software, and network issues. Strong Knowledge of Windows and Mac Operating Systems as well as the capability of understanding IT Quality Assurance for manual and automation testing. Interest in programming, systems, application, web development and skilled in HTML, CSS, JavaScript, Python, and PHP programming languages. Proven ability to work independently, prioritize tasks, and manage time effectively in a fast-paced environment.</p>
         <div class="about-exp">
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
