--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <section id="home" class="home container">
         <div class="row d-flex align-items-center flex-md-row flex-column-reverse">
             <div class="col-12 col-md-8">
-                <h3 class="fw-semibold">Hi! I am</h3>
+                <h3 class="fw-semibold">  </h3>
                 <h1 class="fw-bold">Tegar Muhamad Hafiez</h1>
-                <p>I am Junior Front-End based in Jakarta</p>
+                
                <a class="btn button" href="Resume-TegarMHafiez.pdf" download>Resume</a>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
-                <img src="images/phototegar.png" alt="Potrait">
+                <img src="images/Recent Photograph.jpg" alt="Potrait">
             </div>
         </div>
         <a href="#about" class="text-decoration-none arrow w-100 d-flex align-items-center flex-column mt-5">
@@ -51,13 +51,31 @@
         </a>
     </section>
     <section id="about" class="about container">
-        <p>Bachelor of Computer Science with experience in troubleshooting hardware, software, and network issues. Strong Knowledge of Windows and Mac Operating Systems as well as the capability of understanding IT Quality Assurance for manual and automation testing. Interest in programming, systems, application, web development and skilled in HTML, CSS, JavaScript, Python, and PHP programming languages. Proven ability to work independently, prioritize tasks, and manage time effectively in a fast-paced environment.</p>
+        <p>Result-driven IT professional with a Bachelor of Computer Science degree, offering expertise in troubleshooting, IT quality assurance, and software development. Proven experience in data centers and LOTO/ Tamper Seal Protocols, Skilled in priotizing tasks and managing time effectively in fast paced environments..</p>
         <div class="about-exp">
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
+                      <div>
+                        <h5>Technical Administrator Energy Marshal</h5>
+                        <p> Vinci Energies Indonesia (Nov 2024 - Present)</p>
+                    </div>
+                    <button class="btn button" onclick="toggleDetail(event)">More Info</button>
+                </div>
+                <p class="about-exp-item-detail">
+                    • Part of Commissioning Division on Data Center project in Karawang - Indonesia.
+                    <br>
+                    • Create and update reports in the client platform (Compass & Nexus) to ensure accurate data delivery.
+                    <br>
+                    • Set up, operate, and perform basic repairs on site office inventory (printers, scanners, laptops, and other technical equipment).
+                    <br>
+                    • Managed and monitored Tamper Seal and LOTO (Lockout/Tagout) logs to ensure workplace safety and security
+                    <br>
+                   • Responsible for the registry, controlling, and comprehensive management of operational documents.
+              </p>
+            </div>
                      <div>
                         <h5>IT Support</h5>
-                        <p> Mott MacDonald Indonesia (Mar 2024- Present)</p>
+                        <p> Mott MacDonald Indonesia (Mar 2024 - Nov 2024)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
