--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <h3 class="fw-semibold">  </h3>
                 <h1 class="fw-bold">Tegar Muhamad Hafiez</h1>
                 
-               <a class="btn button" href="Resume-TegarMHafiez.pdf" download>Resume</a>
+               <a class="btn button" href="Resume_TegarMHafiez.pdf" download>Resume</a>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-md-end justify-content-center">
-                <img src="images/Recent Photograph.jpg" alt="Potrait">
+                <img src="images/PasPhotoforgithub.png" alt="Potrait">
             </div>
         </div>
         <a href="#about" class="text-decoration-none arrow w-100 d-flex align-items-center flex-column mt-5">
@@ -62,7 +62,7 @@
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
                 <p class="about-exp-item-detail">
-                    • Part of Commissioning Division on Data Center project in Karawang - Indonesia.
+                    Part of Commissioning Division on Data Center project in Karawang - Indonesia.
                     <br>
                     • Create and update reports in the client platform (Compass & Nexus) to ensure accurate data delivery.
                     <br>
@@ -90,7 +90,8 @@
                     <br>
                     • Preparation of spreadsheets, and computations.
                     <br>
-                    • Any other administrative task and so on</p>
+                    • Any other administrative task and so on
+                </p>
             </div>
              <div class="about-exp">
             <div class="about-exp-item">
