--- a/index.html
+++ b/index.html
@@ -73,26 +73,25 @@
                    • Responsible for the registry, controlling, and comprehensive management of operational documents.
               </p>
             </div>
-                     <div>
-                        <h5>IT Support</h5>
-                        <p> Mott MacDonald Indonesia (Mar 2024 - Nov 2024)</p>
+                <div>
+                        <h5>Technical Administrator Energy Marshal</h5>
+                        <p> Vinci Energies Indonesia (Nov 2024 - Present)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
                 <p class="about-exp-item-detail">
-                    • Ensure maintenance/repair of IT equipment and applications/software at the request of service desk ticket staff in accordance with SLA
+                    Part of Commissioning Division on Data Center project in Karawang - Indonesia.
                     <br>
-                    • Installing, configuring, monitoring and maintaining computer hardware, software, printers, etc
+                    • Create and update reports in the client platform (Compass & Nexus) to ensure accurate data delivery.
                     <br>
-                    • Providing technical IT support to project staff.
+                    • Set up, operate, and perform basic repairs on site office inventory (printers, scanners, laptops, and other technical equipment).
                     <br>
-                    • Preparation of computer graphics, charts and schedules.
+                    • Managed and monitored Tamper Seal and LOTO (Lockout/Tagout) logs to ensure workplace safety and security
                     <br>
-                    • Preparation of spreadsheets, and computations.
-                    <br>
-                    • Any other administrative task and so on
-                </p>
+                   • Responsible for the registry, controlling, and comprehensive management of operational documents.
+              </p>
             </div>
+        
              <div class="about-exp">
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
