--- a/index.html
+++ b/index.html
@@ -73,31 +73,28 @@
                    • Responsible for the registry, controlling, and comprehensive management of operational documents.
               </p>
             </div>
-                <div>
-                        <h5>Technical Administrator Energy Marshal</h5>
-                        <p> Vinci Energies Indonesia (Nov 2024 - Present)</p>
+                    <div class="about-exp">
+            <div class="about-exp-item">
+                <div class="about-exp-item-header">
+                     <div>
+                        <h5>Technical Administrator</h5>
+                        <p> PT.Indokomas Buana Perkasa (Mar 2023- Sept 2023)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="about-exp-item-detail">
-                    Part of Commissioning Division on Data Center project in Karawang - Indonesia.
+                <p class="about-exp-item-detail"> Part of Commissioning Division on Data Center project in Karawang - Indonesia.
                     <br>
-                    • Create and update reports in the client platform (Compass & Nexus) to ensure accurate data delivery.
+                    •  Make and update the report in the client platform (Compass) to make sure the data is delivered correctly
                     <br>
-                    • Set up, operate, and perform basic repairs on site office inventory (printers, scanners, laptops, and other technical equipment).
-                    <br>
-                    • Managed and monitored Tamper Seal and LOTO (Lockout/Tagout) logs to ensure workplace safety and security
-                    <br>
-                   • Responsible for the registry, controlling, and comprehensive management of operational documents.
-              </p>
-            </div>
+                    • Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment). </p>
+        </div>
         
              <div class="about-exp">
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                      <div>
                         <h5>Technical Administrator</h5>
-                        <p> PT.Indokomas Buana Perkasa (Mar 2023- Sept 2023)</p>
+                        <p> Vinci Energies Indoneisa (Mar 2023- Sept 2023)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
