--- a/index.html
+++ b/index.html
@@ -77,16 +77,31 @@
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                      <div>
-                        <h5>Technical Administrator</h5>
-                        <p> PT.Indokomas Buana Perkasa (Mar 2023- Sept 2023)</p>
+                        <h5>IT Support </h5>
+                        <p> Mott MacDonald Indonesia (Mar 2024- Nov 2024)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
                 </div>
-                <p class="about-exp-item-detail"> Part of Commissioning Division on Data Center project in Karawang - Indonesia.
+                <p class="about-exp-item-detail"> 
                     <br>
-                    •  Make and update the report in the client platform (Compass) to make sure the data is delivered correctly
+                    • Ensure maintenance and repair of IT equipment and applications/software as requested by service desk ticket staff, in accordance with SLA.
                     <br>
-                    • Setting, running and basic repairing site office inventory (printer, scanner, laptop and some technical equipment). </p>
+                    • Install, configure, monitor, and maintain computer hardware, software, printers, etc.
+                    <br>
+                    • Provide technical IT support to project staff.
+                    <br>
+                    • Prepare computer graphics, charts, and schedules.
+                    <br>
+                    • Handle GPS monitoring and generate usage reports for on-site motorcycles.
+                    <br>
+                    • Prepare spreadsheets and computations.
+                    <br>
+                    • Managed software licenses, user accounts, and access control to ensure compliance and operational efficiency.
+                    <br>
+                    • Handle user provisioning and IT onboarding/offboarding
+                    <br>
+                    • Perform various administrative tasks as needed.
+                </p>
         </div>
         
              <div class="about-exp">
@@ -124,13 +139,13 @@
        </div/>
             <div class="col-12 col-6 work-img">
                 <div id="work-1" class="work-img-item">    
-                    <img src="images/work-1.png" alt="work 1" >
+                    <img src="images/work1.jpg" alt="work 1" >
                 </div>
                 <div id="work-2" class="work-img-item">    
-                    <img src="images/work-2.png" alt="work 2" >
+                    <img src="images/work2.jpg" alt="work 2" >
                 </div>
                 <div id="work-3" class="work-img-item">    
-                    <img src="images/work-3.png" alt="work 3" >
+                    <img src="images/work3.jpg" alt="work 3" >
                 </div>
             </div>
         </div>
