--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand fs-4 fw-bold" href="#">Tegar Muhamad Hafiez</a>
+            <a class="navbar-brand fs-4 fw-bold" href="#">Tegar Muhamad Hafiez
+IT Support | IT Helpdesk | Technical Administrator | LOTO Staff Data Center</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -108,7 +109,7 @@
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                      <div>
-                        <h5>Technical Administrator</h5>
+                        <h5>Cx Technical Administrator</h5>
                         <p> Vinci Energies Indoneisa (Mar 2023- Sept 2023)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
