--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand fs-4 fw-bold" href="#">Tegar Muhamad Hafiez
-IT Support | IT Helpdesk | Technical Administrator | LOTO Staff Data Center</a>
+            <br>
+               <h5> IT Support | IT Helpdesk | Technical Administrator | LOTO Staff Data Center </h5> 
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -52,12 +54,12 @@ IT Support | IT Helpdesk | Technical Administrator | LOTO Staff Data Center</a>
         </a>
     </section>
     <section id="about" class="about container">
-        <p>Result-driven IT professional with a Bachelor of Computer Science degree, offering expertise in troubleshooting, IT quality assurance, and software development. Proven experience in data centers and LOTO/ Tamper Seal Protocols, Skilled in priotizing tasks and managing time effectively in fast paced environments..</p>
+        <H4>Result-driven IT professional with a Bachelor of Computer Science degree, offering expertise in troubleshooting, IT quality assurance, and software development. Proven experience in data centers and LOTO/ Tamper Seal Protocols, Skilled in priotizing tasks and managing time effectively in fast paced environments..<H4>
         <div class="about-exp">
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                       <div>
-                        <h5>Technical Administrator Energy Marshal</h5>
+                        <h4>Technical Administrator Energy Marshal</h4>
                         <p> Vinci Energies Indonesia (Nov 2024 - Present)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
@@ -78,7 +80,7 @@ IT Support | IT Helpdesk | Technical Administrator | LOTO Staff Data Center</a>
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                      <div>
-                        <h5>IT Support </h5>
+                        <h4>IT Support </h4>
                         <p> Mott MacDonald Indonesia (Mar 2024- Nov 2024)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
@@ -109,7 +111,7 @@ IT Support | IT Helpdesk | Technical Administrator | LOTO Staff Data Center</a>
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                      <div>
-                        <h5>Cx Technical Administrator</h5>
+                        <h4>Cx Technical Administrator</h4>
                         <p> Vinci Energies Indoneisa (Mar 2023- Sept 2023)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
@@ -124,7 +126,7 @@ IT Support | IT Helpdesk | Technical Administrator | LOTO Staff Data Center</a>
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
                      <div>
-                        <h5>Local Facilitator</h5>
+                        <h4>Local Facilitator</h4>
                         <p> Save The Children Indonesia (Jan 2021- Des 2021)</p>
                     </div>
                     <button class="btn button" onclick="toggleDetail(event)">More Info</button>
