--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <a class="navbar-brand fs-4 fw-bold" href="#">Tegar Muhamad Hafiez
             <br>
-               <h5> IT Support | IT Helpdesk | Technical Administrator | LOTO Staff Data Center </h5> 
+               <p> IT Support | IT Helpdesk | Technical Administrator | LOTO Staff Data Center </p> 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
         </a>
     </section>
     <section id="about" class="about container">
-        <H4>Result-driven IT professional with a Bachelor of Computer Science degree, offering expertise in troubleshooting, IT quality assurance, and software development. Proven experience in data centers and LOTO/ Tamper Seal Protocols, Skilled in priotizing tasks and managing time effectively in fast paced environments..<H4>
+        <H4>Result-driven IT professional with a Bachelor of Computer Science degree, offering expertise in troubleshooting, IT quality assurance, and software development. Proven experience in data centers and LOTO/ Tamper Seal Protocols, Skilled in priotizing tasks and managing time effectively in fast paced environments.<H4>
         <div class="about-exp">
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
